prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_instance_from_class.nut
// EXPECTED: compile-time error - class() produces instance, assigned to string
local MyClass = class {
    x = 0
    constructor() {}
}
local obj: string = MyClass()
return obj
